--- a/Don't Peek/Don't Peek.vcxproj.filters
+++ b/Don't Peek/Don't Peek.vcxproj.filters
@@ -13,5 +13,17 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="Source Files\Objects">
+      <UniqueIdentifier>{ebd4b5cf-9dbf-4c49-953f-da738fe577b5}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\Interaction">
+      <UniqueIdentifier>{1d456847-7a49-4cc7-a232-ea7798d4de4d}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\Environment">
+      <UniqueIdentifier>{58528bc4-3748-45b5-974e-42462378cd11}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\Levels">
+      <UniqueIdentifier>{145f7333-551f-4722-9788-59b3964cf770}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
 </Project>
