Fixed some bugs

--- a/Don't Peek/Don't Peek.vcxproj
+++ b/Don't Peek/Don't Peek.vcxproj
@@ -82,6 +82,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\Collision.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="src\Collision.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
