ITS FOLLOW DA PLAYER OMG IM GOOD

--- a/Don't Peek/DontPeek.vcxproj
+++ b/Don't Peek/DontPeek.vcxproj
@@ -88,6 +88,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\Camera.cpp" />
     <ClCompile Include="src\Collision.cpp" />
     <ClCompile Include="src\Door.cpp" />
     <ClCompile Include="src\GameStateMgr.cpp" />
@@ -100,6 +101,7 @@
     <ClCompile Include="src\Wall.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\Camera.h" />
     <ClInclude Include="src\Collision.h" />
     <ClInclude Include="src\Door.h" />
     <ClInclude Include="src\GameStateList.h" />
