--- a/Don't Peek/DontPeek.vcxproj.filters
+++ b/Don't Peek/DontPeek.vcxproj.filters
@@ -67,6 +67,15 @@
     <Filter Include="Source Files\Objects\Highlighter\Header">
       <UniqueIdentifier>{4aa85340-7eb3-4069-9b70-ddb4148c9d32}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Source Files\Environment\Music">
+      <UniqueIdentifier>{d7ce614d-986d-4c97-ae91-1058e94615c0}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\Environment\Music\Header">
+      <UniqueIdentifier>{4c191fdb-20ab-4635-9654-0399cf6dd618}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\Environment\Music\Code">
+      <UniqueIdentifier>{97eac8d9-6777-4987-ad39-9f763bb0b325}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Collision.cpp">
@@ -102,6 +111,9 @@
     <ClCompile Include="src\Menu.cpp">
       <Filter>Source Files\Levels\Code</Filter>
     </ClCompile>
+    <ClCompile Include="src\Music.cpp">
+      <Filter>Source Files\Environment\Music\Code</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Collision.h">
@@ -136,6 +148,42 @@
     </ClInclude>
     <ClInclude Include="src\Menu.h">
       <Filter>Source Files\Levels\Header</Filter>
+    </ClInclude>
+    <ClInclude Include="src\fmod.hpp">
+      <Filter>Source Files\Environment\Music\Header</Filter>
+    </ClInclude>
+    <ClInclude Include="src\fmod_studio.h">
+      <Filter>Source Files\Environment\Music\Header</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Music.h">
+      <Filter>Source Files\Environment\Music\Header</Filter>
+    </ClInclude>
+    <ClInclude Include="src\fmod_studio.hpp">
+      <Filter>Source Files\Environment\Music\Header</Filter>
+    </ClInclude>
+    <ClInclude Include="src\fmod_android.h">
+      <Filter>Source Files\Environment\Music\Header</Filter>
+    </ClInclude>
+    <ClInclude Include="src\fmod_codec.h">
+      <Filter>Source Files\Environment\Music\Header</Filter>
+    </ClInclude>
+    <ClInclude Include="src\fmod_common.h">
+      <Filter>Source Files\Environment\Music\Header</Filter>
+    </ClInclude>
+    <ClInclude Include="src\fmod_dsp.h">
+      <Filter>Source Files\Environment\Music\Header</Filter>
+    </ClInclude>
+    <ClInclude Include="src\fmod_dsp_effects.h">
+      <Filter>Source Files\Environment\Music\Header</Filter>
+    </ClInclude>
+    <ClInclude Include="src\fmod_errors.h">
+      <Filter>Source Files\Environment\Music\Header</Filter>
+    </ClInclude>
+    <ClInclude Include="src\fmod_output.h">
+      <Filter>Source Files\Environment\Music\Header</Filter>
+    </ClInclude>
+    <ClInclude Include="src\fmod_studio_common.h">
+      <Filter>Source Files\Environment\Music\Header</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
